Added radio base estimator to project/build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ project(tmwstm32 VERSION 0.1.0)
 add_subdirectory(lib/rodos)
 
 #Collect datalink source files add them to the executable
-file(GLOB_RECURSE SRC_FILES src/*.cpp)
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+file(GLOB_RECURSE SRC_FILES_C src/*.c)
+file(GLOB_RECURSE SRC_FILES_CPP src/*.cpp)
+add_executable(${PROJECT_NAME} ${SRC_FILES_C} ${SRC_FILES_CPP})
 
 #Create the datalink executable
 target_link_libraries(${PROJECT_NAME} PUBLIC rodos)
