Integrated and tested USB pose to run. Also added local USB upload

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,15 +1,7 @@
-source [find interface/raspberrypi-native.cfg]
-transport select swd
-set CHIPNAME stm32f4
-source [find target/stm32f4x.cfg]
-bcm2835gpio_swd_nums 25 24
-bcm2835gpio_srst_num 18
-reset_config srst_nogate
-adapter_nsrst_delay 100
-adapter_nsrst_assert_width 100
+source [find board/stm32f4discovery.cfg]
 init
 targets
 reset halt
-program main.hex verify
+program ./build/firmware.hex verify
 reset
 shutdown
